--- a/task_app/src/App.css
+++ b/task_app/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media screen and (max-width: 500px) {
+  body{
+    background-color: black;
+    color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
+    text-align: center;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .btn {
+    outline: none;
+    overflow: hidden;
+    border: none;
+    border: 1px solid rgb(173, 172, 172);
+    background-color: transparent;
+    border-radius: 20px;
+    padding: 1em;
+    letter-spacing: 0.2em;
+    margin-top: 2em;
+    width: 50%;
+    color: white;
+    background-color: rgb(0, 17, 255);
+    transition: all 0.5s;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .btn:hover {
+    background-color: rgb(3, 10, 119)
   }
 }
