--- a/task_app/src/App.css
+++ b/task_app/src/App.css
@@ -7,6 +7,59 @@
     text-align: center;
   }
 
+.heading {
+  width: 90%;
+  margin: auto;
+  background-color: rgb(1, 49, 61);
+  background-image: url("../public/mille-sanders-Bc6qPj_f-r0-unsplash.jpg");
+  background-position: center;
+  background-size: cover;
+  /* background-attachment: fixed; */
+  background-repeat: no-repeat;
+}
+
+.container {
+  height: inherit;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+.container h1 {
+  /* position: absolute; */
+  margin-top:0;
+  margin-left: 0;
+  font-weight: 100;
+  font-size: 40px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: auto auto;
+}
+#grid {
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: center;
+  grid-gap: 1em;
+}
+  input {
+    background-color: transparent;
+    display: inline-block;
+    border: none;
+    outline: none;
+    color:white;
+    font-size: 20px;
+    width: 95%;
+    border-bottom: 2px solid blue;
+    transition: all 0.6s;
+  }
+  input:hover{
+    border-bottom: 1px solid blue;
+  }
+  input:focus{
+    border-bottom: 2px solid rgb(0, 238, 0);
+  }
+
   .btn {
     outline: none;
     overflow: hidden;
@@ -24,6 +77,7 @@
   }
   
   .btn:hover {
-    background-color: rgb(3, 10, 119)
+    background-color: rgb(3, 10, 119);
+    box-shadow: 5px 5px rgba(0, 0, 0, 0.2);
   }
 }
