--- a/task_app/src/App.css
+++ b/task_app/src/App.css
@@ -77,6 +77,7 @@
   }
   
   .btn:hover {
+    cursor: pointer;
     background-color: rgb(3, 10, 119);
     box-shadow: 5px 5px rgba(0, 0, 0, 0.2);
   }
@@ -84,5 +85,13 @@
 
 .tasks{
   height: 400px;
-  
+
+}
+
+.todo {
+  width: 85%;
+  margin: auto;
+  background-color: rgb(6, 138, 138);
+  color: black;
+  font-family: 'Courier New', Courier, monospace;
 }
